k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivebox-deployment
spec:
  replicas: 2 # You can start with 2 pods
  selector:
    matchLabels:
      app: hivebox
  template:
    metadata:
      labels:
        app: hivebox
    spec:
      containers:
      - name: hivebox
        image: hivebox:0.0.1 # This will be replaced by our CI/CD pipeline later
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
