k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hivebox-service
spec:
  selector:
    app: hivebox # This must match the 'app' label in your deployment
  ports:
    - protocol: TCP
      port: 80 # The port the service is available on
      targetPort: 8000 # The port your container is listening on
